[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/HUD_Baldric.gd" type="Script" id=1]
[ext_resource path="res://Scripts/LocalMultiplayer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/HUD_Werewolf.gd" type="Script" id=3]
[ext_resource path="res://Scripts/HUD_Golem.gd" type="Script" id=4]
[ext_resource path="res://Scripts/HUD_George.gd" type="Script" id=5]
[ext_resource path="res://Tilemap.tres" type="TileSet" id=6]
[ext_resource path="res://Assets/fire_stepping.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/conquering_tile.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/GunT1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/return.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Golem.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Werewolf.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Baldric.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/George.tscn" type="PackedScene" id=14]
[ext_resource path="res://Teko-Bold.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Assets/menuList.png" type="Texture" id=16]
[ext_resource path="res://Assets/close_002.ogg" type="AudioStream" id=17]
[ext_resource path="res://Assets/open_002.ogg" type="AudioStream" id=18]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.027451, 0.027451, 0.027451, 0.560784 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=19]
size = 25
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.505882, 0.6, 1 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0.505882, 0.6, 1 )

[node name="LocalMultiplayer" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0, 65536, 7, 0, 65537, 6, 0, 65538, 6, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 6, 0, 65564, 6, 0, 65565, 7, 0, 131072, 7, 0, 131073, 6, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 131084, 7, 0, 131085, 7, 0, 131086, 7, 0, 131087, 7, 0, 131088, 7, 0, 131089, 7, 0, 131090, 7, 0, 131091, 7, 0, 131092, 7, 0, 131093, 7, 0, 131094, 7, 0, 131095, 7, 0, 131096, 7, 0, 131097, 7, 0, 131098, 7, 0, 131099, 7, 0, 131100, 6, 0, 131101, 7, 0, 196608, 7, 0, 196609, 3, 0, 196610, 7, 0, 196611, 6, 0, 196612, 6, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 6, 0, 196634, 6, 0, 196635, 7, 0, 196636, 3, 0, 196637, 7, 0, 262144, 7, 0, 262145, 3, 0, 262146, 7, 0, 262147, 6, 0, 262148, 7, 0, 262149, 7, 0, 262150, 7, 0, 262151, 7, 0, 262152, 7, 0, 262153, 7, 0, 262154, 7, 0, 262155, 7, 0, 262156, 7, 0, 262157, 7, 0, 262158, 7, 0, 262159, 7, 0, 262160, 7, 0, 262161, 7, 0, 262162, 7, 0, 262163, 7, 0, 262164, 7, 0, 262165, 7, 0, 262166, 7, 0, 262167, 7, 0, 262168, 7, 0, 262169, 7, 0, 262170, 6, 0, 262171, 7, 0, 262172, 3, 0, 262173, 7, 0, 327680, 7, 0, 327681, 3, 0, 327682, 7, 0, 327683, 3, 0, 327684, 7, 0, 327685, 6, 0, 327686, 6, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 6, 0, 327704, 6, 0, 327705, 7, 0, 327706, 3, 0, 327707, 7, 0, 327708, 3, 0, 327709, 7, 0, 393216, 7, 0, 393217, 3, 0, 393218, 7, 0, 393219, 3, 0, 393220, 7, 0, 393221, 6, 0, 393222, 7, 0, 393223, 7, 0, 393224, 7, 0, 393225, 7, 0, 393226, 7, 0, 393227, 7, 0, 393228, 7, 0, 393229, 7, 0, 393230, 7, 0, 393231, 7, 0, 393232, 7, 0, 393233, 7, 0, 393234, 7, 0, 393235, 7, 0, 393236, 7, 0, 393237, 7, 0, 393238, 7, 0, 393239, 7, 0, 393240, 6, 0, 393241, 7, 0, 393242, 3, 0, 393243, 7, 0, 393244, 3, 0, 393245, 7, 0, 458752, 7, 0, 458753, 3, 0, 458754, 7, 0, 458755, 3, 0, 458756, 7, 0, 458757, 3, 0, 458758, 7, 0, 458759, 6, 0, 458760, 6, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 6, 0, 458774, 6, 0, 458775, 7, 0, 458776, 3, 0, 458777, 7, 0, 458778, 3, 0, 458779, 7, 0, 458780, 3, 0, 458781, 7, 0, 524288, 7, 0, 524289, 3, 0, 524290, 7, 0, 524291, 3, 0, 524292, 7, 0, 524293, 3, 0, 524294, 7, 0, 524295, 6, 0, 524296, 7, 0, 524297, 7, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 7, 0, 524309, 7, 0, 524310, 6, 0, 524311, 7, 0, 524312, 3, 0, 524313, 7, 0, 524314, 3, 0, 524315, 7, 0, 524316, 3, 0, 524317, 7, 0, 589824, 7, 0, 589825, 3, 0, 589826, 7, 0, 589827, 3, 0, 589828, 7, 0, 589829, 3, 0, 589830, 7, 0, 589831, 3, 0, 589832, 7, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 7, 0, 589848, 3, 0, 589849, 7, 0, 589850, 3, 0, 589851, 7, 0, 589852, 3, 0, 589853, 7, 0, 655360, 7, 0, 655361, 3, 0, 655362, 7, 0, 655363, 3, 0, 655364, 7, 0, 655365, 3, 0, 655366, 7, 0, 655367, 6, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0, 655382, 7, 0, 655383, 7, 0, 655384, 6, 0, 655385, 7, 0, 655386, 3, 0, 655387, 7, 0, 655388, 3, 0, 655389, 7, 0, 720896, 7, 0, 720897, 3, 0, 720898, 7, 0, 720899, 3, 0, 720900, 7, 0, 720901, 3, 0, 720902, 7, 0, 720903, 6, 0, 720904, 6, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 6, 0, 720920, 6, 0, 720921, 7, 0, 720922, 3, 0, 720923, 7, 0, 720924, 3, 0, 720925, 7, 0, 786432, 7, 0, 786433, 3, 0, 786434, 7, 0, 786435, 3, 0, 786436, 7, 0, 786437, 6, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 7, 0, 786454, 7, 0, 786455, 7, 0, 786456, 7, 0, 786457, 7, 0, 786458, 6, 0, 786459, 7, 0, 786460, 3, 0, 786461, 7, 0, 851968, 7, 0, 851969, 3, 0, 851970, 7, 0, 851971, 3, 0, 851972, 7, 0, 851973, 6, 0, 851974, 6, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 6, 0, 851994, 6, 0, 851995, 7, 0, 851996, 3, 0, 851997, 7, 0, 917504, 7, 0, 917505, 3, 0, 917506, 7, 0, 917507, 6, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917513, 7, 0, 917514, 7, 0, 917515, 7, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 7, 0, 917520, 7, 0, 917521, 7, 0, 917522, 7, 0, 917523, 7, 0, 917524, 7, 0, 917525, 7, 0, 917526, 7, 0, 917527, 7, 0, 917528, 7, 0, 917529, 7, 0, 917530, 7, 0, 917531, 7, 0, 917532, 6, 0, 917533, 7, 0, 983040, 7, 0, 983041, 3, 0, 983042, 3, 0, 983043, 6, 0, 983044, 6, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 6, 0, 983068, 6, 0, 983069, 7, 0, 1048576, 7, 0, 1048577, 7, 0, 1048578, 7, 0, 1048579, 7, 0, 1048580, 7, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048585, 7, 0, 1048586, 7, 0, 1048587, 7, 0, 1048588, 7, 0, 1048589, 7, 0, 1048590, 7, 0, 1048591, 7, 0, 1048592, 7, 0, 1048593, 7, 0, 1048594, 7, 0, 1048595, 7, 0, 1048596, 7, 0, 1048597, 7, 0, 1048598, 7, 0, 1048599, 7, 0, 1048600, 7, 0, 1048601, 7, 0, 1048602, 7, 0, 1048603, 7, 0, 1048604, 7, 0, 1048605, 7, 0 )

[node name="George" parent="." instance=ExtResource( 14 )]
position = Vector2( 95, 224 )

[node name="Werewolf" parent="." instance=ExtResource( 12 )]
position = Vector2( 476, 602 )
scale = Vector2( 1.2, 1.2 )

[node name="Baldric" parent="." instance=ExtResource( 13 )]
position = Vector2( 1439, 345 )
scale = Vector2( 1.2, 1.2 )

[node name="Golem" parent="." instance=ExtResource( 11 )]
position = Vector2( 1688, 543 )
scale = Vector2( 1, 1 )

[node name="HUD_George" type="Control" parent="."]
margin_left = 80.0
margin_top = 9.0
margin_right = 111.0
margin_bottom = 38.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="HUD_George"]
margin_right = 158.0
margin_bottom = 43.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="HUD_George"]
margin_left = 12.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "SCORE: "

[node name="HUD_Werewolf" type="Control" parent="."]
margin_left = 76.0
margin_top = 1032.0
margin_right = 107.0
margin_bottom = 1061.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="HUD_Werewolf"]
margin_right = 170.0
margin_bottom = 43.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="HUD_Werewolf"]
margin_left = 12.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "SCORE: "

[node name="HUD_Baldric" type="Control" parent="."]
margin_left = 1675.0
margin_top = 11.0
margin_right = 1706.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="HUD_Baldric"]
margin_right = 163.0
margin_bottom = 43.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="HUD_Baldric"]
margin_left = 12.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "SCORE: "

[node name="HUD_Golem" type="Control" parent="."]
margin_left = 1698.0
margin_top = 1030.0
margin_right = 1729.0
margin_bottom = 1059.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="HUD_Golem"]
margin_right = 157.0
margin_bottom = 43.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="HUD_Golem"]
margin_left = 12.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 8 )
text = "SCORE: "

[node name="Label" type="Label" parent="."]
margin_left = 846.0
margin_top = 12.0
margin_right = 1026.0
margin_bottom = 82.0
rect_min_size = Vector2( 180, 70 )
custom_fonts/font = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]

[node name="Restart" type="Button" parent="."]
margin_left = 1526.0
margin_top = 1022.0
margin_right = 1675.0
margin_bottom = 1078.0
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 17 )
text = "RESTART"
icon = ExtResource( 10 )

[node name="Exit" type="Button" parent="."]
margin_left = 328.0
margin_top = 1022.0
margin_right = 442.0
margin_bottom = 1078.0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 18 )
text = "EXIT"
icon = ExtResource( 16 )

[node name="Tile_Conquered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Fire_Stepped" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="RestartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="StopTileConquered" type="Timer" parent="."]

[node name="StopFireStep" type="Timer" parent="."]

[node name="GunT1" parent="." instance=ExtResource( 9 )]
position = Vector2( 414, 95 )

[node name="GunT2" parent="." instance=ExtResource( 9 )]
position = Vector2( 736, 735 )

[node name="GunT3" parent="." instance=ExtResource( 9 )]
position = Vector2( 610, 349 )

[node name="GunT4" parent="." instance=ExtResource( 9 )]
position = Vector2( 414, 993 )

[connection signal="tile_stepped" from="." to="HUD_George" method="_on_tile_stepped"]
[connection signal="tile_stepped" from="." to="HUD_Werewolf" method="_on_tile_stepped"]
[connection signal="tile_stepped" from="." to="HUD_Baldric" method="_on_tile_stepped"]
[connection signal="tile_stepped" from="." to="HUD_Golem" method="_on_tile_stepped"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="StopTileConquered" to="." method="_on_StopTileConquered_timeout"]
[connection signal="timeout" from="StopFireStep" to="." method="_on_StopFireStep_timeout"]
